# maps

./: .gitignore  pyproject.toml
src/: db.sqlite3
src/apps/maps/: admin.py  forms.py  models.py  urls.py  views.py
src/apps/maps/migrations/: 0001_initial.py  0002_alter_floor_floor_map.py  0003_alter_place_place_type.py  0004_alter_floor_map_alter_place_floor.py
src/config/: settings.py  urls.py
src/templates/: base.html  show_svg.html  success.html  upload_floor_svg.html
src/utils/: parse_svg.py  svg_handler.py
